# Taskmaster-Backend

./: .env.example  .gitignore  README.md  main.py  manage.py  project.md  pyproject.toml
infrastructure/: render.yaml
taskmaster_backend/: asgi.py  settings.py  urls.py  wsgi.py
tasks/: models.py  serializers.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_task_priority_alter_task_status.py
users/: serializers.py  tests.py  urls.py  views.py
